 - Make sure that componentMgr override is still calling old when not found
 - Double click on folder tree component element will add a panel
 - Clear element does not work corretly
 - Make xtype a list because of new ComponentMgr
 - Adding item to property grid is not adding
 - Second time resize on same component throws error
 - Code tree not visible
 - Drag of visual component does not work on absolute layout
 
 Change History:
 Version 2.1.0:
  + Added a new json parser therefor begin and end tags are no longer needed in code
  + Visual resize added for active element
  + Found a good solotion for property grid error
  + Split single files containing multiple classes into files
  + Added "scope.!<VAR>" in json object, so you can create local objects if they don't exist
 
 Version 2.0.6:
  + Added PHPFile control thanks to Epsylon
  + index.php is added again to release, wraps index.html
  * Fixed problem with null values in json causing error message (layout wizards)
  * Fixed undo problem, changes made with grid could not be undone
  * Cleaned duplicated values from the propertyselection list
  * Drag element, pressing shift changes to clone mode
  * JsonInit is removed from redraw to increase performance
  * Made code override for Ext.FormPanel so it does not crash on a empty item list
  - Moved ExtJs to seperate folder, so you can choose your version of extjs
  - Cleaned old code from subversion
  + Workarround for error in property grid throwing error variable k

 Version 2.0.5:
  * Fixed problem in CodePress and Designer with path
  * Fixed load indicator in JsonPanel
  * Delete of item with single element failed
  * Fixed problem with required_js and required_css
  
 Version 2.0.4:
  + Loading indicator
  + Documentation window added under Question Mark
  + Added loadConfig method for loading from URL
  + Added autoLoad option in config to load json from URL
  + Added Cookie files
  - Remove debug message Created, for special scope objects