@@ -59,8 +59,8 @@
 				ok(Ext.ComponentMgr.isTypeAvailable('textarea'), 'xtype "textarea" passed');
 				ok(Ext.ComponentMgr.isTypeAvailable('textfield'), 'xtype "textfield" passed');
 				ok(Ext.ComponentMgr.isTypeAvailable('timefield'), 'xtype "timefield" passed');
-				ok(Ext.ComponentMgr.isTypeAvailable('trigger'), 'xtype "trigger" passed');				
-				
+				ok(Ext.ComponentMgr.isTypeAvailable('trigger'), 'xtype "trigger" passed');
+
 				ok(!Ext.ComponentMgr.isTypeAvailable('gmappanel'), 'xtype "gmappanel" passed');
 				ok(!Ext.ComponentMgr.isTypeAvailable('custom'), 'xtype "custom" passed');
 			});
